mutants.out.old/log/src__proto__batch__status.rs_line_90_col_9.log

*** src/proto/batch/status.rs:90:9: replace BatchStatus::open -> Result<Option<BatchHandle<'a, S>>, Error> with Ok(Some(BatchHandle::from(Default::default())))

*** mutation diff:
--- src/proto/batch/status.rs
+++ replace BatchStatus::open -> Result<Option<BatchHandle<'a, S>>, Error> with Ok(Some(BatchHandle::from(Default::default())))
@@ -82,11 +82,11 @@
 impl<'a> BatchStatus {
     /// Open the batch for which this `BatchStatus` has been retrieved.
     ///
     /// See [`open_batch`](Client::open_batch).
     pub async fn open<S: AsyncBufReadExt + AsyncWriteExt + Unpin + Send>(
         &self,
         prod: &'a mut Client<S>,
     ) -> Result<Option<BatchHandle<'a, S>>, Error> {
-        prod.open_batch(self.bid.clone()).await
+        Ok(Some(BatchHandle::from(Default::default()))) /* ~ changed by cargo-mutants ~ */
     }
 }


*** /home/pavel/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/cargo build --tests --manifest-path /tmp/cargo-mutants-faktory-rs-jIMFg4.tmp/Cargo.toml --all-features
   Compiling faktory v0.12.5 (/tmp/cargo-mutants-faktory-rs-jIMFg4.tmp)
error[E0277]: the trait bound `BatchHandle<'_, S>: Default` is not satisfied
  --> src/proto/batch/status.rs:90:35
   |
90 |         Ok(Some(BatchHandle::from(Default::default()))) /* ~ changed by cargo-mutants ~ */
   |                                   ^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `BatchHandle<'_, S>`

For more information about this error, try `rustc --explain E0277`.
error: could not compile `faktory` (lib) due to 1 previous error
warning: build failed, waiting for other jobs to finish...
error: could not compile `faktory` (lib test) due to 1 previous error

*** result: Failure(101)
